[package]
name = "printpdf_utils"
version = "0.1.0"
authors = ["Peter Pickerill"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
printpdf = "0.3.4"
bmp = "0.5.0"
barcoders = {version = "1.0.2", features = ["image"]}
